2006-01-08  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-python-module.c (gedit_python_module_init_python):
	does not allow python to manage SIGINT signal: this is needed to avoid
	the crash reported on bug #326191 (Crash when pressing Ctrl+C 
	from terminal) 

2006-01-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-plugins-engine.c: make sure the garbage collector
	runs before we unload C plugins. Fix crash on exit.

2006-01-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.c: fix typos.
	* gedit/gtktextregion.[ch]: ditto.

2006-01-06  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-plugins-engine.[ch]
	* gedit/gedit-python-module.[ch]
	* gedit/gedit-window.c:

	Run the python Garbage Collector when closing a window or a tab
	in order to force python to release references to our objects.

2006-01-06  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-plugin.[ch]:
	* gedit/gedit-python-plugin.c:

	implement configure_dialog support for python plugins and make
	sure to chain up to the default gedit-plugin methods if a python
	plugin doesn't override a method.
	Patch from Jesse Van Den Kieboom and Raphael Slinckx.

2006-01-05  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-view.c (gedit_view_class_init): added reset_searched_text
	signal and keybinding
	(reset_searched_text): new function

	* gedit/gedit-view.h: added  reset_searched_text signal

2006-01-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.c (compute_num_of_lines): make utf8-aware.

2005-01-05  Steve Frécinaux  <nud@apinc.org>
 
 	* gedit/gedit-view.c : larger timeout for the search box, scroll back
 	only on <escape> (cf. Bug #105196) ; hide the search box when the window
 	looses focus.
 
2006-01-05  Paolo Maggi  <paolo@gnome.org>

	Implemented search highligthing: all the occurences of the searched
	text are highlighted
	
	* data/gedit.schemas.in: added editor/search_highlighting/enable key

	* gedit/Makefile.am: compile gtktextregion.[ch]
	