@@ -1,5 +1,10 @@
 2006-01-08  Paolo Maggi  <paolo@gnome.org>
 
+	* gedit/sexy-icon-entry.c:
+	* gedit/sexy-icon-entry.h: updated from libsexy SVN repository
+
+2006-01-08  Paolo Maggi  <paolo@gnome.org>
+
 	* gedit/gedit-python-module.c (gedit_python_module_init_python):
 	does not allow python to manage SIGINT signal: this is needed to avoid
 	the crash reported on bug #326191 (Crash when pressing Ctrl+C 
